2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* NEWS:

	English corrections by Robert McQueen.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* NEWS:

	Update the NEWS file for 0.2 release.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	Some more object ref leakage fixes.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-gui.c:

	Set the version string on the about dialogs.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:

	Bump up the version to 0.2.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* README:
	
	Update the README.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Quit menuitem calls application_exit() instead of gtk_main_quit() on
	activation.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	- Explicitly destroy the main window.
	- Don't leak the treemodels.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp.c:

	Search for "upnp:rootdevice" rather than "ssdp:all".

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Fix some resource ref and GList leakage.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:
	* src/universal-cp.c:
	* src/universal-cp.h:

	- The main module exits the mainloop
	- GUI and UPnP objects are destroyed before exiting the mainloop. This
	  is to allow the service proxies to unsubscribe themselves.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-upnp.c:

	Print more details on the console for each failed notification.
